Manifests/service.yml
kind: Service
apiVersion: v1
metadata:
  name: weighttrackerimg
spec:
  selector:
    app: weighttrackerimg
  ports:
    - port: 5678 # Default port for image
      targetPort: 80
